--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Ben Cates <ben.cates@gmail.com>"]
 [dependencies]
 log = { version = "^0.4" }
 simple_logger = "^0.5"
+sysfs-pwm = "0.1.0"
